# azure-sdk-guardian

./: LICENSE  README.md  pyproject.toml
checker/: azure_checker.py
extension/src/: extension.ts
server/: server.py
